# pycurtain

./: LICENSE.md  README.md  setup.cfg  setup.py
.github/scripts/: update_release_version.py
.github/workflows/: build_publish.yml  python-publish.yml
src/pycurtain/: __init__.py
src/pycurtain/img2img/: __init__.py  stability_ai.py  template.py
src/pycurtain/process/: __init__.py  text_to_video_zoom.py
src/pycurtain/secrete/: stuff.py
src/pycurtain/source/: __init__.py  craiyon.py  dalle2.py  deep_ai.py  gpt3.py  replicate_stable_diffusion.py  stable_diffusion.py
src/pycurtain/source/protos/: image.py  text.py
src/pycurtain/task/: __init__.py
src/pycurtain/task/image/: __init__.py
src/pycurtain/task/text/: __init__.py
src/pycurtain/text2img/: __init__.py  stability_ai.py  template.py
src/pycurtain/upscaler/: __init__.py  deep_ai.py  template.py
src/pycurtain/utility/: image.py  video.py
tests/: test.py  test_001.py  test_edit.py  test_image.py  test_mode.py  test_text.py
