[metadata]
name = Pycurtain
description = A community-maintained python package for wrapping REST APIs that interface with a variety of different AI models. Think "curtain", like wizard of oz behind the curtain. This tool lets the developer close the curtains and only focus on implementing one code base for any supported AI models.
long_description_content_type = text/markdown
url = https://github.com/bin2ai/pycurtain
project_urls =
    Bug Tracker = https://github.com/bin2ai/pycurtain/issues
    Changelog = https://github.com/bin2ai/pycurtain/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src